XIVY-4975 export mvn dependencies to lib folder (new mojo)